--- a/startup-demo/index.html
+++ b/startup-demo/index.html
@@ -16,6 +16,9 @@
 </head>
   
 <body>
+  <a id="topup" href="#menu">
+    <i class="fas fa-angle-double-up"></i>
+  </a>
 
   <header class="container1440">
     <div class="logo-button-container">
@@ -25,17 +28,17 @@
 
     <nav id="menu">
       <ul>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Process</a></li>
+        <li><a href="#team-section">Team</a></li>
+        <li><a href="#about-section">About us</a></li>
+        <li><a href="#process-section">Process</a></li>
         <li  id="sm-hidden"><a class="header-logo" href="#">STARTUP</a></li>
-        <li><a href="#">Explication</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
-        <li class="small"><a class="small" href="#">Apply</a></li>
+        <li><a href="#stats-section">Explication</a></li>
+        <li><a href="#news-section">News</a></li>
+        <li><a href="#footer-section">Contact</a></li>
+        <li class="small"><a class="small" href="#apply-section">Apply</a></li>
       </ul>
 
-      <a href="#" class="header-apply see-more">Apply</a>
+      <a href="#apply-section" class="header-apply see-more">Apply</a>
     </nav>
 
     <div class="welcome">
@@ -50,7 +53,7 @@
   </header>
   <main class="container1440">
 
-    <section class="section-about">
+    <section id="about-section" class="section-about">
       <div class="about container-1140">
         <img src="banner.png" class="banner-img" alt="banner">
         <p class="description about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt convallis dignissim. Integer convallis diam tortor, a blandit quam dignissim sed. Maecenas semper lobortis enim quis tincidunt. Donec quis ultrices orci. Suspendisse rutrum sapien ac lobortis suscipit. Nullam pellentesque fringilla est, in efficitur nisl porta eu. Donec elementum condimentum sem non bibendum.n pellentesque dolor sit amet nisi lacinia euismod. Mauris elementum turpis sem, ut laoreet purus porta ut. Suspendisse posuere purus id nunc eleifend, id condimentum nulla tempus. Donec tortor sem, efficitur a laoreet ut, lacinia ac ante</p>
@@ -58,7 +61,7 @@
       </div>
     </section>
 
-    <section class="section-team">
+    <section id="team-section" class="section-team">
       <div class="team container-1140">
         <h2>Team</h2>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae tempus odio. Nam gravida diam eros, non ultricies velit varius ut.</p>
@@ -85,7 +88,7 @@
       </div>
     </section>
 
-    <section class="section-process">
+    <section id="process-section" class="section-process">
       <div class="process container-1200">
         <h2>Process</h2>
         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae tempus odio. Nam gravida diam eros, non ultricies velitvariusulaciniacans</p>
@@ -127,7 +130,7 @@
       </div>
     </section>
 
-    <section class="section-stats">
+    <section id="stats-section" class="section-stats">
       <div class="stats container-1140">
         <p class="vivamus">VIVAMUS BLANDIT</p>
         <div class="stats-row">
@@ -163,7 +166,7 @@
       </div>   
     </section>
 
-    <section class="section-news">
+    <section id="news-section" class="section-news">
       <div class="news container-1140">
         <div class="news-area">
           <a href="#" class="news-items-wrapper">
@@ -178,7 +181,7 @@
                   </div>
                   <div class="time-area">
                     <img src="time.png" alt="">
-                    <p class="mins">25MIN AGO</p>
+                    <p class="mins">25MIN<br>AGO</p>
                   </div>
                 </div>
               </div>
@@ -197,7 +200,7 @@
                   </div>
                   <div class="time-area">
                     <img src="time.png" alt="">
-                    <p class="mins">25MIN AGO</p>
+                    <p class="mins">25MIN<br>AGO</p>
                   </div>
                 </div>
               </div>
@@ -216,7 +219,7 @@
                   </div>
                   <div class="time-area">
                     <img src="time.png" alt="">
-                    <p class="mins">25MIN AGO</p>
+                    <p class="mins">25MIN<br>AGO</p>
                   </div>
                 </div>
               </div>
@@ -235,7 +238,7 @@
                   </div>
                   <div class="time-area">
                     <img src="time.png" alt="">
-                    <p class="mins">25MIN AGO</p>
+                    <p class="mins">25MIN<br>AGO</p>
                   </div>
                 </div>
               </div>
@@ -254,7 +257,7 @@
                   </div>
                   <div class="time-area">
                     <img src="time.png" alt="">
-                    <p class="mins">25MIN AGO</p>
+                    <p class="mins">25MIN<br>AGO</p>
                   </div>
                 </div>
               </div>
@@ -273,7 +276,7 @@
                   </div>
                   <div class="time-area">
                     <img src="time.png" alt="">
-                    <p class="mins">25MIN AGO</p>
+                    <p class="mins">25MIN<br>AGO</p>
                   </div>
                 </div>
               </div>
@@ -284,7 +287,7 @@
       </div>
     </section>
 
-    <section class="section-apply">
+    <section id="apply-section" class="section-apply">
       <div class="apply container-1140">
         <h2>Apply</h2>
         <p class="description">Thought experiments (Gedankenexperimenten) are “facts” in the sense</p>
@@ -339,7 +342,7 @@
 
   </main>
 
-  <footer>
+  <footer id="footer-section">
     <p class="footer-logo">STARTUP</p>
 
     <div class="footer-container">
