--- a/startup-demo/index.html
+++ b/startup-demo/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Startup landing page</title>
 
-  <link rel="shortcut icon" href="" type="image/x-icon">
-  <link rel="icon" href="" type="image/x-icon">
+  <link rel="shortcut icon" href="./fav.png" type="image/x-icon">
+  <link rel="icon" href="./fav.png" type="image/x-icon">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap">
   <link rel="stylesheet" href="../fontawesome-free-5.15.1-web/css/all.min.css">
