--- a/Minimo/Minimo/post-full-width.html
+++ b/Minimo/Minimo/post-full-width.html
@@ -89,19 +89,22 @@
       </div>
     </div>
     <div class="comments-container">
-      <p>2 COMMENTS</p>
+      <p class="comment-title">2 COMMENTS</p>
+
       <div class="comments">
 
         <img src="/Minimo/Minimo/fullwidth/Livello_2.png" alt="">
+        
         <div class="comments-area">
           <p class="name">John Doe</p>
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo!</p>
           <p>Reply</p>
         </div>
+
       </div>
 
       <div class="comments">
-        <img src="/Minimo/Minimo/fullwidth/JD.png" alt="">
+        <img src="/Minimo/Minimo/fullwidth/minimo.png" alt="">
         <div class="comments-area">
           <p class="name">Jane Doe</p>
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
@@ -109,13 +112,17 @@
         </div>
       </div>
 
-      <div class="comments">
-        <img src="/Minimo/Minimo/fullwidth/Livello_2.png" alt="">
+      <div class="comments last-comment">
+        <img src="/Minimo/Minimo/fullwidth/JD2.png" alt="">
         <div class="comments-area empty">
          <input type="text" placeholder="JOIN THE DISCUSSION">
         </div>
       </div>
-
+      <div class="comments-social">
+        <p>CONNECTED WITH</p>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+      </div>
     </div>
   </main>
 
