--- a/Minimo/Minimo/index.html
+++ b/Minimo/Minimo/index.html
@@ -22,14 +22,14 @@
   </a>
 
   <header id="header">
-    <a href="#header" class="brand">minimø</a>
+    <a href="index.html" class="brand">minimø</a>
     <button id="menu-button"><i class="fas fa-bars"></i></button>
     <nav id="menu">
       <ul>
-        <li><a href="#lifestyle">lifestyle</a></li>
-        <li><a href="#photodiary">photodiary</a></li>
-        <li><a href="#blog2">music</a></li>
-        <li><a href="#blog2">travel</a></li>
+        <li><a href="post-full-width.html">lifestyle</a></li>
+        <li><a href="post-full-width.html">photodiary</a></li>
+        <li><a href="post-full-width.html">music</a></li>
+        <li><a href="post-full-width.html">travel</a></li>
       </ul>
     </nav>
   </header>
