--- a/Minimo/Minimo/post-sidebar.html
+++ b/Minimo/Minimo/post-sidebar.html
@@ -21,6 +21,10 @@
       <i class="fas fa-angle-double-up"></i>
   </a>
 
+  <button id="sidebar-button">
+    <i class="fas fa-sliders-h"></i>
+  </button>
+
   <header id="header">
     <a href="index.html" class="brand">minimø</a>
     <button id="menu-button"><i class="fas fa-bars"></i></button>
@@ -37,35 +41,73 @@
   <main>
     <img src="/Minimo/Minimo/JPG/banner.jpg" alt="">
 
-    <div class="container">
-      <div class="full-photodiary">
-        <h3>photodiary</h3>
-        <h2>The perfect weekend getaway</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <strong>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium</strong>, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+    <div class="sidebar-main container">
+      
+      <div class="sidebar-mainland">
 
-        <p id="full-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </p>
+        <div class="full-photodiary">
+          <h3>photodiary</h3>
+          <h2>The perfect weekend getaway</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <strong>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium</strong>, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+
+        </div>
+
+        <div class="full-blogs">
+
+          <img src="/Minimo/Minimo/fullwidth/Untitled-1.jpg" alt="">
+          <img src="/Minimo/Minimo/fullwidth/Untitled-2.jpg" alt="">
+          <img src="/Minimo/Minimo/fullwidth/Untitled-3.jpg" alt="">
+
+          <p id="italic">“Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.” </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <strong>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+
+          <div id="share">
+            <p id="share-text">SHARE</p>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter-square"></i></a>
+            <a href="#"><i class="fab fa-google-plus"></i></a>
+            <a href="#"><i class="fab fa-tumblr"></i></a>
+            <a href="#"><i class="fab fa-pinterest"></i></a>
+          </div>
+        </div>
 
       </div>
 
-      <div class="full-blogs">
+      <div id="sidebar">
+        <img src="./sidebar/author.png" alt="">
 
-        <img src="/Minimo/Minimo/fullwidth/Untitled-1.jpg" alt="">
-        <img src="/Minimo/Minimo/fullwidth/Untitled-2.jpg" alt="">
-        <img src="/Minimo/Minimo/fullwidth/Untitled-3.jpg" alt="">
+        <h2>About me</h2>
 
-        <p id="italic">“Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.” </p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <strong>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eimod tempor incididunt ut labore et dolore magna aliqua. Ut enirm ad minim veniam, quis nostrud exercitation ullamco laboris</p>
 
-        <div id="share">
-          <p id="share-text">SHARE</p>
+        <div class="sidebar-social">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter-square"></i></a>
-          <a href="#"><i class="fab fa-google-plus"></i></a>
-          <a href="#"><i class="fab fa-tumblr"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-pinterest"></i></a>
         </div>
+
+        <h3>TOP POSTS</h3>
+        <ul>
+          <li>
+            <a href="#">A day exploring the Alps</a>
+            <p href="#">24 COMMENTS</p>  
+          </li>
+          <li>
+            <a href="#">American dream</a>
+            <p href="#">19 COMMENTS</p>  
+          </li>
+          <li>
+            <a href="#">Cold winter days</a>
+            <p>15 COMMENTS</p> 
+          </li>
+        </ul>
+
+        <div class="sidebar-banner" >
+          <p>250X250</p>
+          <p>BANNER SPOT</p>
+        </div>
       </div>
+
     </div>
     <div class="also">
       <div class="also-container">
