--- a/Minimo/Minimo/post-sidebar.html
+++ b/Minimo/Minimo/post-sidebar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sidebar Post</title>
+  <title>Post sidebar</title>
 
   <link rel="shortcut icon" href="" type="image/x-icon">
   <link rel="icon" href="" type="image/x-icon">
