--- a/test.html
+++ b/test.html
@@ -30,18 +30,20 @@
   
   .carousel-indicators {
   position: absolute;
-  bottom: -17.5px;
-  left: calc(50% - 35px);
+  bottom: -7.5px;
+  left: calc(50% - 37.5px);
   z-index: 100;
   background-color: black;
-  width: 70px;
+  width: 75px;
   margin: 0px;
   }
   
   .carousel-indicators li {
     width: 15px;
     height: 15px;
-    border-radius: 50%
+    border-radius: 50%;
+    border: 1px;
+    margin: 0px 5px;
   }
   
   body {
@@ -57,6 +59,7 @@
   background-color: black;
   font-size: 20px !important;
   left: 5%;
+  line-height: initial !important;
   }
   
   .containers {
@@ -86,19 +89,19 @@
   }
 
   h1 {
-    font-size: 25px;
+    font-size: 35px;
     margin-bottom: 0px;
-
+    line-height: 35px;
   }
 
   h2 {
-    font-size: 12px;
+    font-size: 13px;
     margin-bottom: 0px;
 
   }
 
   p {
-    font-size: 8px !important;
+    font-size: 11px !important;
     margin-bottom: 0px;
 
   }
@@ -107,7 +110,7 @@
     margin-bottom: 0px;
     width: 50%;
     max-width: 120px;
-
+    padding: 5px 10px !important;
   }
   .carousel-item {
     padding: 15px;
