--- a/halo/index.html
+++ b/halo/index.html
@@ -9,6 +9,7 @@
     <title>Trang chủ</title>
   </head>
   <body>
+    <h1>ABC</h1>
     <header>
       <div class="container">
         <ul>
@@ -18,7 +19,7 @@
         </ul>
       </div>
     </header>
-    <h1>Trang chủ nè</h1>
+    <h1>Trang chủ 26/01</h1>
     <footer class="footer">
       <ul>
         <li><a class="nav-link nav-items" href="#">ABC</a><a class="nav-link nav-items" href="#">DEF</a><a class="nav-link nav-items" href="#">GHI</a></li>
