--- a/halo/index.html
+++ b/halo/index.html
@@ -6,7 +6,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"/>
+    <link rel="stylesheet" type="text/css" href="/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="/slick/slick-theme.css"/>
     <link rel="stylesheet" href="css/layout.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
     <title>Trang chủ</title>
   </head>
   <body>
@@ -33,10 +36,34 @@
         </div>
       </nav>
     </header>
+    <main>
+      <div class="main-carousel single-item">
+        <div class="slide-1">
+          <div class="flex-column justify-content-between p-0">
+            <h1 class="big-title">Tiêu điểm tháng 1</h1>
+            <div class="logo-wrapper">
+              <p class="canon-logo">Canon</p>
+              <p class="eos-r">EOS R</p>
+            </div>
+            <p class="size-14">ĐỊNH NGHĨA LẠI CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI</p><button type="button" class="white-btn btn btn-outline-light text-light mx-auto">Xem chi tiết</button><img class="banner-xs" src="img/body-img/eos-r-main-banner-xs.png" alt=""/>
+          </div>
+        </div>
+        <div class="slide-2">
+          <h1 class="big-title">Tiêu điểm tháng 1</h1>
+          <p>DEF</p>
+        </div>
+        <div class="slide-3">
+          <h1 class="big-title">Tiêu điểm tháng 1</h1>
+          <p>XYZ</p>
+        </div>
+      </div>
+      <h1>Body</h1>
+    </main>
     <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
