--- a/halo/parts/header.html
+++ b/halo/parts/header.html
@@ -1,7 +1,7 @@
 
 <header>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <div class="container">
+    <div class="container px-4">
       <div class="hamburger-wrapper">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"><span class="navbar-toggler-icon"></span></button>
       </div><a class="navbar-brand" href="index.html"><img src="img/misc-img/logo-white.png" alt=""/></a>
