--- a/halo/parts/main-carousel.html
+++ b/halo/parts/main-carousel.html
@@ -1,21 +1,99 @@
 
-<div class="main-carousel single-item">
-  <div class="slide-1">
-    <div class="flex-column justify-content-between p-0">
-      <h1 class="big-title">Tiêu điểm tháng 1</h1>
-      <div class="logo-wrapper">
-        <p class="canon-logo">Canon</p>
-        <p class="eos-r">EOS R</p>
+<div class="carousel slide" id="main-carousel" data-ride="carousel" data-interval="false" data-touch="true">
+  <!--indicators: 3 nút định vị trang-->
+  <ul class="carousel-indicators">
+    <li class="active" data-target="#main-carousel" data-slide-to="0"></li>
+    <li data-target="#main-carousel" data-slide-to="1"></li>
+    <li data-target="#main-carousel" data-slide-to="2"></li>
+  </ul>
+  <!--nội dung carousel-->
+  <div class="carousel-inner">
+    <div class="carousel-item banner-1 active">
+      <div class="carousel-caption">
+        <div class="carousel-caption-text">
+          <h1 class="big-title font-weight-bold">Tiêu điểm tháng 1</h1>
+          <div class="logo-wrapper-1">
+            <p class="canon-logo">Canon</p>
+            <p class="eos-r">EOS R</p>
+            <div class="progress" style="width:90px; height: 5px">
+              <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 5px"></div>
+            </div>
+          </div>
+          <p class="carousel-header font-italic">ĐỊNH NGHĨA LẠI <br/> CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI</p>
+          <button class="white-btn btn btn-outline-light text-light see-more-btn" type="button">Xem chi tiết</button>
+        </div><img class="carousel-caption-banner-xs" src="img/carousel-img/eos-r-main-banner-xs.png" alt=""/>
+        <div class="carousel-caption-extra">
+          <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-1.png" alt=""/>
+            <p class="extra-text">LẤY NÉT TỰ ĐỘNG DUAL PIXEL CMOS </p>
+          </div>
+          <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-2.png" alt=""/>
+            <p class="extra-text">TỐI ƯU HÓA ĐIỀU KHIỂN </p>
+          </div>
+          <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-3.png" alt=""/>
+            <p class="extra-text">QUAY VIDEO ĐA CHẾ ĐỘ ĐỘ PHÂN GIẢI 4K</p>
+          </div>
+        </div>
       </div>
-      <p class="size-14">ĐỊNH NGHĨA LẠI CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI</p><button type="button" class="white-btn btn btn-outline-light text-light mx-auto">Xem chi tiết</button><img class="banner-xs" src="img/body-img/eos-r-main-banner-xs.png" alt=""/>
     </div>
-  </div>
-  <div class="slide-2">
-    <h1 class="big-title">Tiêu điểm tháng 1</h1>
-    <p>DEF</p>
-  </div>
-  <div class="slide-3">
-    <h1 class="big-title">Tiêu điểm tháng 1</h1>
-    <p>XYZ</p>
-  </div>
+    <div class="carousel-item banner-2">
+      <div class="carousel-caption">
+        <div class="carousel-caption-text">
+          <h1 class="big-title font-weight-bold">Tiêu điểm tháng 1</h1>
+          <div class="logo-wrapper-2">
+            <div class="logo-only">
+              <p class="sony-logo">SONY</p><img class="a9-logo" src="img/carousel-img/alpha-logos.png" alt=""/>
+            </div>
+            <div class="progress" style="width: 90px; height: 5px">
+              <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 5px"></div>
+            </div>
+          </div>
+          <p class="carousel-header font-italic">SỰ HOÀN HẢO<br/> CHƯA BAO GIỜ GẦN ĐẾN VẬY</p>
+          <button class="white-btn btn btn-outline-light text-light see-more-btn" type="button">Xem chi tiết</button>
+        </div><img class="carousel-caption-banner-xs" src="img/carousel-img/a9-main-banner-xs-v3.png" alt=""/>
+        <div class="carousel-caption-extra">
+          <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-1.png" alt=""/></div>
+          <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-2.png" alt=""/></div>
+          <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-3.png" alt=""/></div>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item banner-3">
+      <div class="carousel-caption">
+        <div class="carousel-caption-text">
+          <h1 class="big-title font-weight-bold">Tiêu điểm tháng 1</h1>
+          <div class="logo-wrapper-3">
+            <p class="sony-logo">SONY</p><span class="collab"><i class="fas fa-times"></i></span><img class="lotr-logo" src="img/carousel-img/lotr-logo.png" alt=""/>
+          </div>
+          <p class="carousel-header font-italic">MỘT NGÀM CHO TẤT CẢ<br/> Kết nối mọi thứ với ngàm E-mount của <span class="sony-logo">SONY</span></p>
+          <button class="white-btn btn btn-outline-light text-light see-more-btn" type="button">Xem chi tiết</button>
+        </div><img class="carousel-caption-banner-xs" src="img/carousel-img/e-mount-banner-xs-v3.png" alt=""/>
+        <div class="carousel-caption-extra">
+          <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-1.png" alt=""/></div>
+          <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-2.png" alt=""/></div>
+          <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-3.png" alt=""/></div>
+        </div>
+      </div>
+    </div>
+  </div><a class="carousel-control-prev" href="#main-carousel" data-slide="prev"><img src="img/misc-img/prev-arrow-xs.png"/></a><a class="carousel-control-next" href="#main-carousel" data-slide="next"><img src="img/misc-img/next-arrow-xs.png"/></a>
 </div>
+<!--.main-carousel
+.slide-1
+  h1.big-title Tiêu điểm tháng 1
+
+  .logo-wrapper
+    p.canon-logo Canon
+    p.eos-r EOS R
+
+  p.size-14 ĐỊNH NGHĨA LẠI CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI
+
+  <button type="button" class="white-btn btn btn-outline-light text-light mx-auto">Xem chi tiết</button>
+
+  img.banner-xs(src="img/body-img/eos-r-main-banner-xs.png" alt="")
+
+.slide-2
+  h1.big-title Tiêu điểm tháng 1
+  p DEF
+.slide-3
+  h1.big-title Tiêu điểm tháng 1
+  p XYZ
+-->
