--- a/halo/index.html
+++ b/halo/index.html
@@ -12,11 +12,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+      <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container px-4">
-          <div class="hamburger-wrapper">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"><span class="navbar-toggler-icon"></span></button>
-          </div><a class="navbar-brand" href="index.html"><img src="img/misc-img/logo-white.png" alt=""/></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img src="img/misc-img/logo-white.png" alt=""/></a>
           <div class="cart-search"><a href="review-hub.html">
                <i class="fas fa-search"></i></a><a href="cart.html">
                <i class="fas fa-shopping-cart"></i></a></div>
@@ -100,7 +98,7 @@
                 <div class="logo-wrapper-3">
                   <p class="sony-logo">SONY</p><span class="collab"><i class="fas fa-times"></i></span><img class="lotr-logo" src="img/carousel-img/lotr-logo.png" alt=""/>
                 </div>
-                <p class="carousel-header font-italic">MỘT NGÀM CHO TẤT CẢ<br/> Kết nối mọi thứ với ngàm E-mount của <span class="sony-logo">SONY</span></p>
+                <p class="carousel-header font-italic">MỘT NGÀM CHO TẤT CẢ<br/> Kết nối mọi thứ với ngàm E-mount của <span class="sony-logo-inline">SONY</span></p>
                 <button class="white-btn btn btn-outline-light text-light see-more-btn" type="button">Xem chi tiết</button>
               </div><img class="carousel-caption-banner-xs" src="img/carousel-img/e-mount-banner-xs-v3.png" alt=""/>
               <div class="carousel-caption-extra">
@@ -133,7 +131,9 @@
         h1.big-title Tiêu điểm tháng 1
         p XYZ
       -->
-      <h1>Body</h1>
+      <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis dolorem beatae non itaque doloremque repudiandae neque aut nisi eveniet, labore obcaecati, deserunt laborum, nihil tenetur consectetur nostrum. Fugiat, expedita suscipit.</h1>
+      <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis dolorem beatae non itaque doloremque repudiandae neque aut nisi eveniet, labore obcaecati, deserunt laborum, nihil tenetur consectetur nostrum. Fugiat, expedita suscipit.</h1>
+      <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis dolorem beatae non itaque doloremque repudiandae neque aut nisi eveniet, labore obcaecati, deserunt laborum, nihil tenetur consectetur nostrum. Fugiat, expedita suscipit.</h1>
     </main>
     <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
