--- a/halo/parts/header.html
+++ b/halo/parts/header.html
@@ -1,10 +1,8 @@
 
 <header>
-  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-md navbar-dark">
     <div class="container px-4">
-      <div class="hamburger-wrapper">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"><span class="navbar-toggler-icon"></span></button>
-      </div><a class="navbar-brand" href="index.html"><img src="img/misc-img/logo-white.png" alt=""/></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img src="img/misc-img/logo-white.png" alt=""/></a>
       <div class="cart-search"><a href="review-hub.html">
            <i class="fas fa-search"></i></a><a href="cart.html">
            <i class="fas fa-shopping-cart"></i></a></div>
