--- a/halo/parts/main-carousel.html
+++ b/halo/parts/main-carousel.html
@@ -64,7 +64,7 @@
           <div class="logo-wrapper-3">
             <p class="sony-logo">SONY</p><span class="collab"><i class="fas fa-times"></i></span><img class="lotr-logo" src="img/carousel-img/lotr-logo.png" alt=""/>
           </div>
-          <p class="carousel-header font-italic">MỘT NGÀM CHO TẤT CẢ<br/> Kết nối mọi thứ với ngàm E-mount của <span class="sony-logo">SONY</span></p>
+          <p class="carousel-header font-italic">MỘT NGÀM CHO TẤT CẢ<br/> Kết nối mọi thứ với ngàm E-mount của <span class="sony-logo-inline">SONY</span></p>
           <button class="white-btn btn btn-outline-light text-light see-more-btn" type="button">Xem chi tiết</button>
         </div><img class="carousel-caption-banner-xs" src="img/carousel-img/e-mount-banner-xs-v3.png" alt=""/>
         <div class="carousel-caption-extra">
