--- a/halo/parts/main-carousel.html
+++ b/halo/parts/main-carousel.html
@@ -60,8 +60,9 @@
               <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-2-extra-2.png" alt=""/></div>
               <div class="extra"><img class="extra-img" src="img/carousel-img/carousel-2-extra-3.png" alt=""/></div>
             </div>
-            <p class="carousel-header">SỰ HOÀN HẢO</p>
-            <p class="carousel-header">CHƯA BAO GIỜ GẦN ĐẾN VẬY</p>
+            <p class="carousel-header display-till-md">SỰ HOÀN HẢO</p>
+            <p class="carousel-header hidden-till-md">Sự hoàn hảo chưa bao giờ ở gần đến vậy</p>
+            <p class="carousel-header display-till-md">CHƯA BAO GIỜ GẦN ĐẾN VẬY</p>
             <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
           </div>
           <div class="carousel-caption__img"></div>
