--- a/halo/index.html
+++ b/halo/index.html
@@ -120,39 +120,54 @@
                   <div class="logo-wrapper-3">
                     <p class="logo-sony">SONY</p><span class="collab"><i class="fas fa-times"></i></span><img class="lotr-logo" src="img/carousel-img/lotr-logo.png" alt="">
                   </div>
+                  <div class="carousel-caption__img-wrapper hidden-till-md">
+                    <div class="carousel-caption__img"></div>
+                    <div class="carousel-caption__img"></div>
+                    <div class="carousel-caption__img"></div>
+                  </div>
                   <p class="carousel-header">MỘT NGÀM CHO TẤT CẢ</p>
                   <p class="carousel-header">Kết nối mọi thứ với ngàm E-mount của <span class="logo-sony-inline">SONY</span></p>
                   <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
                 </div>
-                <div class="carousel-caption__img"></div>
-                <div class="carousel-caption__extra hidden-till-md">
-                  <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-1.png" alt=""></div>
-                  <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-2.png" alt=""></div>
-                  <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-3.png" alt=""></div>
-                </div>
+                <div class="carousel-caption__img display-till-md"></div>
               </div>
             </div>
           </div><a class="carousel-control-prev" href="#main-carousel" data-slide="prev"><img src="img/misc-img/prev-arrow-xs-v2.png"></a><a class="carousel-control-next" href="#main-carousel" data-slide="next"><img src="img/misc-img/next-arrow-xs-v2.png"></a>
         </div>
       </div>
       <section class="intro">
-        <div class="camera-intro__text">
+        <div class="intro-camera__text">
           <h1>Máy ảnh DSLR/Mirrorless</h1>
           <h2>
-             Phá bỏ giới hạn hình ảnh từ chiếc máy ảnh du lịch giá rẻ<br>và cả smartphone đắt tiền của bạn</h2>
+             Phá bỏ giới hạn từ chiếc máy ảnh du lịch giá rẻ<br>và cả smartphone đắt tiền của bạn</h2>
           <button class="btn btn--dark seemore-btn" type="button">Xem chi tiết</button>
         </div>
-        <div class="camera-intro__img"><img src="img/body-img/camera-intro-img.png" alt=""></div>
+        <div class="intro-camera__img"><img src="img/body-img/camera-intro-imgv2.png" alt=""></div>
+      </section>
+      <section class="intro dark-side">
+        <div class="intro-lens__text">
+          <h1>Ống kính máy ảnh</h1>
+          <h2>
+             Góc nhìn mới, cảm nhận mới và những thế giới mới</h2>
+          <button class="btn btn--dark seemore-btn" type="button">Xem chi tiết</button>
+        </div>
+        <div class="intro-lens__img"><img src="img/lens-img/lens-intro-imgv2.png" alt=""></div>
       </section>
       <section class="intro">
-        <div class="lens-intro__text">
-          <h1>Máy ảnh DSLR/Mirrorless</h1>
-          <h2>
-             Phá bỏ giới hạn hình ảnh từ chiếc máy ảnh du lịch giá rẻ<br>và cả smartphone đắt tiền của bạn</h2>
-          <button class="btn btn--dark seemore-btn" type="button">Xem chi tiết</button>
+        <div class="intro-equip__text">
+          <h1>Phụ kiện máy ảnh</h1>
+          <h2>Dù có “pro” đến mấy cũng cần các trợ thủ đắc lực</h2>
         </div>
-        <div class="lens-intro__img"><img src="img/lens-img/lens-intro-img.png" alt=""></div>
+        <div class="intro-equip__img display-till-md"><img src="img/equip-img/equip-intro--min.png" alt=""></div>
+        <div class="intro-equip__img card-columns hidden-till-md">
+          <div class="card"><img class="card-img" src="img/equip-img/equip-1.png" alt=""></div>
+          <div class="card"><img class="card-img" src="img/equip-img/equip-5.png" alt=""></div>
+          <div class="card"><img class="card-img" src="img/equip-img/equip-3.jpg" alt=""></div>
+          <div class="card"><img class="card-img" src="img/equip-img/equip-4.png" alt=""></div>
+        </div>
+        <button class="btn btn--dark seemore-btn" type="button">Xem chi tiết</button>
       </section>
+      <section class="intro dark-side"></section>
     </main>
     <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
