--- a/halo/parts/main-carousel.html
+++ b/halo/parts/main-carousel.html
@@ -77,16 +77,16 @@
             <div class="logo-wrapper-3">
               <p class="logo-sony">SONY</p><span class="collab"><i class="fas fa-times"></i></span><img class="lotr-logo" src="img/carousel-img/lotr-logo.png" alt=""/>
             </div>
+            <div class="carousel-caption__img-wrapper hidden-till-md">
+              <div class="carousel-caption__img"></div>
+              <div class="carousel-caption__img"></div>
+              <div class="carousel-caption__img"></div>
+            </div>
             <p class="carousel-header">MỘT NGÀM CHO TẤT CẢ</p>
             <p class="carousel-header">Kết nối mọi thứ với ngàm E-mount của <span class="logo-sony-inline">SONY</span></p>
             <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
           </div>
-          <div class="carousel-caption__img"></div>
-          <div class="carousel-caption__extra hidden-till-md">
-            <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-1.png" alt=""/></div>
-            <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-2.png" alt=""/></div>
-            <div class="extra"><img class="extra-img" src="img/misc-img/carousel-1-extra-3.png" alt=""/></div>
-          </div>
+          <div class="carousel-caption__img display-till-md"></div>
         </div>
       </div>
     </div><a class="carousel-control-prev" href="#main-carousel" data-slide="prev"><img src="img/misc-img/prev-arrow-xs-v2.png"/></a><a class="carousel-control-next" href="#main-carousel" data-slide="next"><img src="img/misc-img/next-arrow-xs-v2.png"/></a>
