--- a/halo/index.html
+++ b/halo/index.html
@@ -135,28 +135,27 @@
           </div><a class="carousel-control-prev" href="#main-carousel" data-slide="prev"><img src="img/misc-img/prev-arrow-xs-v2.png"></a><a class="carousel-control-next" href="#main-carousel" data-slide="next"><img src="img/misc-img/next-arrow-xs-v2.png"></a>
         </div>
       </div>
-      <section class="intro">
+      <section class="intro-camera">
         <div class="intro-camera__text">
           <h1>Máy ảnh DSLR/Mirrorless</h1>
-          <h2>
-             Phá bỏ giới hạn từ chiếc máy ảnh du lịch giá rẻ<br>và cả smartphone đắt tiền của bạn</h2>
+          <h3>
+             Phá bỏ giới hạn từ chiếc máy ảnh du lịch giá rẻ<br>và cả smartphone đắt tiền của bạn</h3>
           <button class="btn btn--dark seemore-btn" type="button">Xem chi tiết</button>
         </div>
         <div class="intro-camera__img"><img src="img/body-img/camera-intro-imgv2.png" alt=""></div>
       </section>
-      <section class="intro dark-side">
+      <section class="intro-lens dark-side">
         <div class="intro-lens__text">
           <h1>Ống kính máy ảnh</h1>
-          <h2>
-             Góc nhìn mới, cảm nhận mới và những thế giới mới</h2>
-          <button class="btn btn--dark seemore-btn" type="button">Xem chi tiết</button>
+          <h3>Góc nhìn mới, cảm nhận mới, thế giới mới</h3>
+          <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
         </div>
         <div class="intro-lens__img"><img src="img/lens-img/lens-intro-imgv2.png" alt=""></div>
       </section>
-      <section class="intro">
+      <section class="intro-equip">
         <div class="intro-equip__text">
           <h1>Phụ kiện máy ảnh</h1>
-          <h2>Dù có “pro” đến mấy cũng cần các trợ thủ đắc lực</h2>
+          <h3>Dù có “pro” đến mấy cũng cần các trợ thủ đắc lực</h3>
         </div>
         <div class="intro-equip__img display-till-md"><img src="img/equip-img/equip-intro--min.png" alt=""></div>
         <div class="intro-equip__img card-columns hidden-till-md">
@@ -167,7 +166,67 @@
         </div>
         <button class="btn btn--dark seemore-btn" type="button">Xem chi tiết</button>
       </section>
-      <section class="intro dark-side"></section>
+      <section class="intro-specials dark-side">
+        <h1>Đối tác chiến lược</h1>
+        <div class="intro-specials__brands--img"><img src="img/misc-img/brands-sony.png" alt=""><img src="img/misc-img/brands-nikon.png" alt=""><img src="img/misc-img/brands-canon.png" alt=""><img src="img/misc-img/brands-sigma.png" alt=""></div>
+        <div class="intro-specials__brands--text">
+          <h3>Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: từ 12 tháng lên 24 tháng</h3>
+        </div>
+        <h1>Chính sách độc quyền</h1>
+        <div class="intro-specials__policy">
+          <div class="policy-item">
+            <p class="policy-item__text"><span>Miễn phí</span>vận chuyển nội thành Hà Nội<br>(riêng phụ kiện: chỉ áp dụng với đơn hàng tổng giá trị trên 200,000 đ)</p>
+            <div class="policy-item__icon"><i class="fas fa-truck"></i>
+              <p>FREE</p>
+            </div>
+          </div>
+          <div class="policy-item">
+            <p class="policy-item__text">Đổi mới sản phẩm hoặc<span> hoàn tiền 100%</span>giá trị sản phẩm trong 14 ngày nếu có lỗi từ nhà sản xuất</p>
+            <div class="policy-item__icon"><i class="fas fa-history"></i>
+              <p>100%</p>
+            </div>
+          </div>
+          <div class="policy-item">
+            <p class="policy-item__text">Hỗ trợ trả góp mọi sản phẩm với <span>0% lãi suất</span><br>Hỗ trợ thanh toán trực tuyến, thẻ tín dụng, ví điện tử</p>
+            <div class="policy-item__icon"><i class="far fa-credit-card"></i>
+              <p>0%</p>
+            </div>
+          </div>
+        </div>
+        <button class="btn btn--light seemore-btn" type="button">Xem chi tiết       </button>
+      </section>
+      <section class="promo">
+        <h1>Tin khuyến mại</h1>
+        <div class="promo__collection"><img class="promo-item" src="img/misc-img/promo-img-1.jpg" alt=""><img class="promo-item" src="img/misc-img/promo-img-2.jpg" alt=""><img class="promo-item" src="img/misc-img/promo-img-1.jpg" alt=""></div>
+        <button class="btn btn--dark seemore-btn" type="button">Xem chi tiết</button>
+      </section>
+      <section class="review dark-side">
+        <h1>HALO review</h1>
+        <div class="review-item"><img class="review-item__img" src="img/misc-img/review-img.png" alt="">
+          <div class="review-item__content">
+            <h2>Top 5 DSLR đáng mua năm 2021</h2>
+            <p class="subtext">Trung Đức</p>
+            <p class="subtext"> <i class="far fa-clock"></i>01/01/2021</p>
+            <p class="review-headlines">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. </p>
+          </div>
+        </div>
+        <div class="review-item"><img class="review-item__img" src="img/misc-img/review-img.png" alt="">
+          <div class="review-item__content">
+            <h2>Top 5 DSLR đáng mua năm 2021</h2>
+            <p class="subtext">Trung Đức</p>
+            <p class="subtext"> <i class="far fa-clock"></i>01/01/2021</p>
+            <p class="review-headlines">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. </p>
+          </div>
+        </div>
+        <button class="btn btn--light seemore-btn" type="button">Xem chi tiết        </button>
+      </section>
+      <section class="connection">
+        <h1 class="connection__header">Đăng ký email để nhận tin tức mới nhất từ HALO</h1>
+        <input class="connection__input" type="text" placeholder="Email của bạn...">
+        <button class="btn connection__submit-btn">Gửi</button>
+        <p class="connection__text">Hoặc theo dõi chúng tôi tại</p>
+        <div class="connection__socials"><a class="socials__item" href="#"><img src="img/misc-img/social-fb.png" alt=""></a><a class="socials__item" href="#"><img src="img/misc-img/social-insta.png" alt=""></a><a class="socials__item" href="#"><img src="img/misc-img/social-twitter.png" alt=""></a></div>
+      </section>
     </main>
     <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
